--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -288,6 +288,6 @@ plugins_js  = []
 ############################
 ## Content Management System
 ############################
-[cms]
-  # See https://sourcethemes.com/academic/docs/install/#install-with-web-browser
-  netlify_cms = true
+# [cms]
+#   # See https://sourcethemes.com/academic/docs/install/#install-with-web-browser
+#   netlify_cms = true
